--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ framework = arduino
 [env:esp12e]
 platform = espressif8266
 board = esp12e
-board_build.f_cpu = 160000000L
+; board_build.f_cpu = 160000000L
 ; upload_port = 192.168.10.205  
 ; upload_protocol = espota
 
