--- a/platformio.ini
+++ b/platformio.ini
@@ -9,26 +9,21 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-
-monitor_speed =  74880
-; upload_speed = 921600
-
-lib_deps = 
-    emelianov/modbus-esp8266 @ 4.1.0
-    ottowinter/ESPAsyncWebServer-esphome @ 2.1.0
-    bblanchon/ArduinoJson @ 6.19.4
-    gyverlibs/GyverTimer @ 3.2
-
 framework = arduino
+lib_deps = 
+    emelianov/modbus-esp8266 @ ^4.1.0
+    ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
+    bblanchon/ArduinoJson @ ^6.19.4
+    gyverlibs/GyverTimer @ ^3.2
 
 [env:esp12e]
+monitor_speed =  74880
 platform = espressif8266
 board = esp12e
-; board_build.f_cpu = 160000000L
-; upload_port = 192.168.10.205  
-; upload_protocol = espota
-
+upload_port = 192.168.10.205  
+upload_protocol = espota
 
 [env:esp32dev]
+monitor_speed =  115200
 platform = espressif32
 board = esp32dev 
