--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,9 @@ lib_deps =
     bblanchon/ArduinoJson @ ^6.19.4
     gyverlibs/GyverTimer @ ^3.2
 
+build_flags = 
+    -DASYNCWEBSERVER_REGEX
+
 [env:esp12e]
 monitor_speed =  74880
 platform = espressif8266
